# android-activity

./: Cargo.toml  README.md
android-activity/: Cargo.toml
android-activity/src/: input.rs  lib.rs
android-activity/src/game_activity/: input.rs  mod.rs
android-activity/src/native_activity/: mod.rs
examples/agdk-eframe/: Cargo.toml
examples/agdk-eframe/src/: lib.rs
examples/agdk-egui/: README.md
examples/agdk-mainloop/: README.md
examples/na-mainloop/: README.md
examples/na-openxr-wgpu/: Cargo.toml
examples/na-openxr-wgpu/src/: lib.rs
examples/na-winit-wgpu/: Cargo.toml
examples/na-winit-wgpu/src/: lib.rs
examples/ndk-glue-bevy/: .gitignore  Cargo.toml  README.md  build.rs
examples/ndk-glue-bevy/app/: build.gradle
examples/ndk-glue-bevy/app/src/main/: AndroidManifest.xml
examples/ndk-glue-bevy/src/: lib.rs
